@@ -1,3 +1,7 @@
+2007-04-18  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/lib/cairo/color.rb: supported HSV.
+
 2007-04-16  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/lib/cairo/color.rb, src/lib/cairo/pattern.rb,
